fix transaction source overflow

--- a/frontend/src/modules/transactions/TransactionSource/TransactionSource.module.scss
+++ b/frontend/src/modules/transactions/TransactionSource/TransactionSource.module.scss
@@ -33,5 +33,6 @@
 
   .right {
     flex: 3;
+    overflow: scroll;
   }
 }
